# piranhaNET

./: .gitignore  README.md  package-lock.json
.github/workflows/: piranha-api.yml  piranha-apps.yml  piranha-electron.yml  piranha-installer-ubuntu.yml  piranha-runner.yml  piranhanet-installers.yml
piranha-api/: .gitignore  Dockerfile  Dockerfile.draft3  Dockerfile_deaft4  Dockerfile_draft  Dockerfile_draft2  README.md  main.py  pyproject.toml
piranha-api/app/: file_manager.py  main.py  piranha_runner.py  settings.py
piranha-api/scripts/: build-and-run-docker-dev  build-docker-dev  run-docker-dev  stop-docker-dev
piranha-api/tests/: test_file_manager.py  test_integration.py  test_settings.py
piranha-apps/: .prettierignore  .prettierrc  README.md  components.json  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vitest-setup-client.ts  vitest.config.ts  web.vite.config.ts
piranha-apps/messages/: en.json  fr.json  pt.json
piranha-apps/piranha-web/: index.css  index.html
piranha-electron/: .gitignore  .prettierignore  .prettierrc  .prettierrc.yaml  README.md  components.json  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.web.json  vitest-setup-client.ts  vitest.config.ts
piranha-installer/: .gitignore  README.md  entrypoint.py  environment.yml  piranha.spec  runtime_hook.py  test_log.txt
piranha-runner/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
piranha-runner/src/: index.ts  (+3 more)
scripts/: run-api  run-electron  run-electron-dev.sh  run-web
sveltekit-app/: package-lock.json  package.json  vite.config.ts
test-data/: badBarcodes.csv
(+235 files in other folders)
