[project]
name = "piranha-api"
version = "0.1.0"
description = "A FastAPI interface allowing the PiranhaNET electron and web applications to run Piranha jobs and retrieve results."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.3",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0"
]
