[project]
name = "piranha-api"
version = "0.1.0"
description = "A FastAPI interface allowing the PiranhaNET electron and web applications to run Piranha jobs and retrieve results."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "shortuuid>=1.0.13",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"