[project]
name = "piranha-api"
version = "0.1.0"
description = "A FastAPI interface allowing the PiranhaNET electron and web applications to run Piranha jobs and retrieve results."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "shortuuid>=1.0.13",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.0",
    "ruff>=0.15.18",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "B",
    "C",
    "DTZ",
    "E",
    "F",
    "I",
    "ICN",
    "ISC",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "Q",
    "RUF",
    "T",
    "UP",
    "W",
    "YTT",
]
ignore =[
    "T201" # Allow print
]

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values
"tests/*/" = ["PLR2004"]
